@@ -1,3 +1,9 @@
+2002-03-19  Per Bothner  <per@bothner.com>
+
+	* AbstractSequence.java.in (remove):  Make public.
+	* SimpleVector.java.in (remove):  Make public.
+	* StableVector.java (makePosition):  Make public.
+
 2002-02-16  Per Bothner  <per@bothner.com>
 
 	* UnescapedData.java:  Implement Consumable..
